--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -318,6 +318,13 @@ Still place *"btf_id" value* /inside metadata/ area, *as last member*
  - (last_member) /btf_id/ becomes a /communication channel/
    - *Unknown*: How to communicate BTF "origin" (vmlinux, module or local)?
 
+* Slide: Hardware considerations                                     :export:
+
+Goal: hardware should produce XDP-hints
+
+Consider defining Endianess: Big vs Little endian
+ - In XDP-hints struct layout
+
 
 
 * Idea
