--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -130,7 +130,7 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
  - Very /early access/ to frame (in driver code *after DMA sync*)
  - Ability to */skip/ (large parts) of kernel /code/*
    - Evolve XDP via /BPF-helpers/
- - */Pitfall/*: Lost traditional HW offloads (e.g. RX-hash, checksum etc.)
+ - */Pitfall/*: *Lost* /traditional HW offloads/ (e.g. RX-hash, checksum etc.)
 
 ** Slide: XDP architecture                                        :noexport:
 #+ATTR_HTML: :class img-no-border
@@ -294,19 +294,20 @@ Kernel-side: Could *extend* /=xdp_buff=/ + /=xdp_frame=/ with "btf_id" or ptr
    - */Cons/*: /AF_XDP/ *cannot read* this ctx->btf_id
    - *Unknown*: Can /chained BPF-progs/ *update/write* ctx->btf_id *?*
  - /Pros/: /Kernel internally/ can (likely) store *pointer to btf* struct
-   - */Cons/*: This needs reference counting and race/lifetime handling
+   - */Cons/*: This needs reference counting and */race/lifetime handling/*
  - /Pros/: *XDP to SKB* conversion (should be) easier to extract offloads
    - *Unknown*: Will it be harder to support change /layout per pkt/ *???*
 
-Details: If */dropping/* /layout per pkt/ requirement
+Details: If */dropping/* requirement /layout per pkt/
  - Possible to /store btf pointer in/ *=xdp_rxq_info=*
 
 ** Slide: Solution(B): /Decouple/ with *btf_id* /in metadata/       :export:
 
 Place *"btf_id" value* /inside metadata/ area, *as last member*
- - last member: due to "grows" backwards, important for AF_XDP decoding
+ - last member: due to "grows" backwards, important *for AF_XDP* /decoding/
  - Extend /=xdp_buff=/ + /=xdp_frame=/ (+AF_XDP) with flags that BTF is "enabled"
    - */Notice/*: Need *3 flags* for BTF "origin" (vmlinux, module or local)
+     - *module* resolved via /=xdp_rxq_info=/ *or* /=xdp_frame->dev_rx=/
 
 This cause /decoupling via btf_id/ as becomes *struct "version"* number
  - /Pros/: Easy to handle change /layout per pkt/
@@ -318,7 +319,7 @@ This cause /decoupling via btf_id/ as becomes *struct "version"* number
 
 Still place *"btf_id" value* /inside metadata/ area, *as last member*
  - *BUT* is considered /cached version/ from *kernel stored pointer to btf*
-   - */Cons/*: reference counting and lifetime handling still needed
+   - */Cons/*: reference counting and */lifetime handling still needed/*
 
 /Pros/: *XDP to SKB* conversion /can work/
  - via check if btf_id match btf-ptr id before trusting BTF layout
@@ -334,8 +335,8 @@ Still place *"btf_id" value* /inside metadata/ area, *as last member*
  - Should cover today /known SKB offload hints/
  - Could have /some/ *defines as UAPI* in bpf.h (e.g. hash-type, csum-type)
 
-NIC drivers can let their xdp_hints include common struct as member
- - Can extend with NIC specific hints by adding *flag* in xdp_buff/xdp_frame
+NIC /drivers/ can let their /xdp_hints/ *include common struct as member*
+ - Can *extend* with /NIC specific hints/ by adding *flag* in xdp_buff/xdp_frame
    - That indicate /layout is compatible/ with "xdp_hints_common"
 
 /Pros/: Easier to implement XDP to SKB transition
