LLC2022: Adjust slide Define "generic" xdp_hints common struct
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -331,6 +331,8 @@ Still place *"btf_id" value* /inside metadata/ area, *as last member*
 
 * Idea: Define "generic" xdp_hints common struct                     :export:
 
+*Partly* */UAPI/kABI/* approach
+
 /Kernel/ (*/not module/*) *=struct xdp_hints_common=* (vmlinux BTF id)
  - Should cover today /known SKB offload hints/
  - Could have /some/ *defines as UAPI* in bpf.h (e.g. hash-type, csum-type)
@@ -339,7 +341,7 @@ NIC /drivers/ can let their /xdp_hints/ *include common struct as member*
  - Can *extend* with /NIC specific hints/ by adding *flag* in xdp_buff/xdp_frame
    - That indicate /layout is compatible/ with "xdp_hints_common"
 
-/Pros/: Easier to implement XDP to SKB transition
+/Pros/: Easier to implement *XDP to SKB* /transition/
  - *Cons*: Goes against the fully dynamic BTF based layout
 
 
