LLC2022: Adjust slides after viewing as PDF
Somehow title on one slide is displayed on two lines
when rendered as PDF while HTML version didn't.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -355,9 +355,9 @@ New *UAPI* /might/ *not* be needed:
 Struct naming-convention for xdp_hints
  - Could be way for drivers to "export" available BTF-layouts
 
-** Idea: Define "generic" xdp_hints common struct                   :export:
+** Slide: Define "generic" xdp_hints common struct            :export:
 
-*Partly* */UAPI/kABI/* approach
+Idea: *Partly* */UAPI/kABI/* approach
 
 /Kernel/ (*/not module/*) *=struct xdp_hints_common=* (vmlinux BTF id)
  - Should cover today /known SKB offload hints/
