LLC2022: Slide: Metadata + BTF = communication channel
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -360,6 +360,21 @@ NIC /drivers/ can let their /xdp_hints/ *include common struct as member*
  - *Cons*: Goes against the fully dynamic BTF based layout
 
 
+* Slide: Metadata + BTF = communication channel                      :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+
+Using *metadata* area to /communication state/
+ - Create /structure via BTF/
+
+Relevant for:
+ - *Chained* /BPF-progs/ (between XDP to TC hooks, also BPF tail-calls)
+ - *XDP-prog* sending info to userspace /AF_XDP/ sockets
+
+Already: *Works today!*
+
 
 * Slide: Hardware considerations                                   :noexport:
 
