LLC2022: Fix link in org-mode notes for conf homepage
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LLC2022/xdp_hints_hw_metadata.org
+++ b/conference/LLC2022/xdp_hints_hw_metadata.org
@@ -13,7 +13,7 @@
 
 * For conference: Lund Linux Con (LLC) 2022
 
-This presentation will be given at [[https://lundlinuxcon.org/][LLC 2022] the
+This presentation will be given at [[https://lundlinuxcon.org/][LLC 2022]] the
 Lund Linux Con.
 
 * Slides below                                                     :noexport:
