LinuxPlumbers2022: Fix README file
It is LPC and not LLC.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2022/README.org
+++ b/conference/LinuxPlumbers2022/README.org
@@ -1,9 +1,9 @@
-#+Title: Linux Plumbers Conf (LLC) 2022
+* Linux Plumbers Conf (LPC) 2022
 
-Presentation source for talks given at Linux Plumbers Conf (LLC) 2022
+Presentation source for talks given at Linux Plumbers Conf (LPC) 2022
 under the [[https://lpc.events/event/16/sessions/131/#all][eBPF & Networking]] track.
 
-* Talks
+** Talks
 
 XDP-queuing (XDQ) related:
  - [[https://lpc.events/event/16/contributions/1351/][Bringing packet queueing to XDP]]
